charon/tests/ui/non-lifetime-gats.out
error: Generic associated types are not supported
 --> tests/ui/non-lifetime-gats.rs:5:5
  |
5 |     type Pointer<T>: Deref<Target = T>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::PointerFamily
 --> tests/ui/non-lifetime-gats.rs:4:1
  |
4 | trait PointerFamily {
  | ^^^^^^^^^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/non-lifetime-gats.rs:34:9
   |
34 |         type Type<U>: Link<T>;
   |         ^^^^^^^^^^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::moar_variables::Trait
  --> tests/ui/non-lifetime-gats.rs:33:5
   |
33 |     trait Trait<T> {
   |     ^^^^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/non-lifetime-gats.rs:13:5
   |
13 |     type Pointer<U> = Box<U>;
   |     ^^^^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::{impl#0}
  --> tests/ui/non-lifetime-gats.rs:12:1
   |
12 | impl PointerFamily for BoxFamily {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Generic associated types are not supported
  --> tests/ui/non-lifetime-gats.rs:39:9
   |
39 |         type Type<U> = (T, U);
   |         ^^^^^^^^^^^^

error: Ignoring the following item due to a previous error: test_crate::moar_variables::{impl#1}
  --> tests/ui/non-lifetime-gats.rs:38:5
   |
38 |     impl<T> Trait<Option<T>> for Foo {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

ERROR Compilation encountered 8 errors
